# xspec-models-cxc

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci-ciao-workflow.yml  publish.yml
helpers/: __init__.py  apply_templates.py  apply_utils.py  identify_xspec.py  report_xspec_directories.py  report_xspec_libraries.py  report_xspec_modelfile.py  report_xspec_version.cxx  template.py  utils_template.py
scripts/: doc-example.py  example.py  report_models.py  smaug.py
src/: xspec.cxx
src/include/: xspec_models_cxc.hh
src/tests/: test_basic.py
src/xspec_models_cxc/: __init__.py
src/xspec_models_cxc/tests/: test_realarray.py  test_utils.py
template/: __init__.py  utils.py  xspec.cxx
