[metadata]
name = xspec_models_cxc
license = GNU GPL v3
author = Douglas Burke
author_email = dburke@cfa.harvard.edu
description = Access the XSPEC models from Python **experimental**
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cxcsds/xspec-models-cxc
platforms = Linux, Mac OS X
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: C
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
install_requires =
    numpy

packages = find:
package_dir =
    =src

include_package_data = True

[options.packages.find]
where=src
